use class not id for images

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,13 +143,15 @@ body {
 
 #description-image {
   /* Positioning */
-  float: left;
+  float: right;
 
   /* Box-model */
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   margin-top: 20px;
   margin-right: 20px;
+  /* margin: auto;    
+  display: block; */
 }
 
 /* Description content media query */
