in the wilderness

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,11 +143,11 @@ body {
 
 #description-image {
   /* Positioning */
-  float: right;
+  float: left;
 
   /* Box-model */
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 400px;
   margin-top: 20px;
   margin-right: 20px;
   /* margin: auto;    
@@ -254,6 +254,19 @@ body {
 }
 
 /* ----COMPARISON END---- */
+
+/* ----VISUALIZATION START---- */
+#visualization-image {
+  /* Box-model */
+  width: 600px;
+  height: 600px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin: auto;    
+  display: block;
+}
+
+/* ----VISUALIZATION END---- */
 
 /* ----FOOTER START---- */
 .footer {
